Permissions seeder update, swagger editings
