# storage/api-docs/api-docs.json
@@ -52,6 +52,7 @@
                     "Auth"
                 ],
                 "summary": "User registration.",
+                "description": "Remark: When creating a user, a default group is generated for its links.",
                 "operationId": "056fa15c5ad1f7947054ef8083841eec",
                 "requestBody": {
                     "required": true,
@@ -262,6 +263,7 @@
                     "Auth"
                 ],
                 "summary": "Getting a link to login via social network.",
+                "description": "Remark: When creating a user, a default group is generated for its links.",
                 "operationId": "dff1ac4551836bd454c09598b675fe42",
                 "parameters": [
                     {
@@ -331,7 +333,7 @@
                 "tags": [
                     "Permissions"
                 ],
-                "summary": "Get paginated list of links.",
+                "summary": "Get list of permissions.",
                 "description": "Only for admins.",
                 "operationId": "59924a6edc50841ff7935e2e7e2d1ad2",
                 "responses": {
@@ -340,15 +342,7 @@
                         "content": {
                             "application/json": {
                                 "schema": {
-                                    "properties": {
-                                        "data": {
-                                            "type": "array",
-                                            "items": {
-                                                "$ref": "#/components/schemas/Permission"
-                                            }
-                                        }
-                                    },
-                                    "type": "object"
+                                    "$ref": "#/components/schemas/PermissionsList"
                                 }
                             }
                         }
@@ -815,6 +809,7 @@
                     "Links"
                 ],
                 "summary": "Create new link.",
+                "description": "Remark: If you do not specify the groups, the default one will be automatically set.",
                 "operationId": "0a6b0569be350f4a81e51be1888e3bf5",
                 "requestBody": {
                     "required": true,
@@ -1152,7 +1147,7 @@
                     "User"
                 ],
                 "summary": "Create new user manually.",
-                "description": "Only for admins.",
+                "description": "Only for admins. Remark: When creating a user, a default group is generated for its links.",
                 "operationId": "a2024e7428c2b58c64a6da90003a7240",
                 "requestBody": {
                     "required": true,
@@ -1622,6 +1617,12 @@
                 },
                 "type": "object"
             },
+            "PermissionsList": {
+                "type": "array",
+                "items": {
+                    "$ref": "#/components/schemas/Permission"
+                }
+            },
             "PatchGroupRequest": {
                 "properties": {
                     "name": {
@@ -1661,7 +1662,7 @@
                 },
                 "type": "object"
             },
-            "StoreLinkRequest": {
+            "StoreGroupRequest": {
                 "required": [
                     "name",
                     "description"
@@ -1740,7 +1741,7 @@
                 },
                 "type": "object"
             },
-            "StoreGroupRequest": {
+            "StoreLinkRequest": {
                 "required": [
                     "name",
                     "description",
